# core_server

./: .gitignore  Cargo.toml  LICENSE  README.md
api_documentation/auth/: change_pwd.http  delete_user.http  forgot_pwd.http  login.http  logout.http  register.http  resend_activation_token.http  reset_pwd.http  update_user.http  verify_account.http
documentation/api_doc/: login.http
src/: di.rs  lib.rs
src/api/: mod.rs
src/api/auth/: auth_di.rs  mod.rs
src/api/auth/data/: mod.rs
src/api/auth_token/: auth_token_di.rs  mod.rs
src/api/auth_token/data/: mod.rs
src/core/: mod.rs
src/core/config/: mod.rs
src/core/datasource/: crud_datasource.rs  mod.rs
src/core/datasource/mongo_db/: crud_datasource_mongodb_impl.rs  mod.rs  mongodb_connection.rs
src/core/entities/: mod.rs  pagination.rs  response.rs
src/core/errors/: app_error.rs  error_types.rs  handle_rejection.rs  mod.rs
src/core/events/: mod.rs
src/core/middleware/: admin_middleware.rs  auth_middleware.rs  mod.rs  owner_or_admin_middleware.rs
src/core/models/: crud_model.rs  mod.rs
src/core/repositories/: crud_repository.rs  crud_repository_impl.rs  mod.rs
src/core/services/: jwt_service.rs  mod.rs  rand_token_service.rs
src/core/services/email_service/: email_service.rs  email_service_resend_impl.rs  (+1 more)
src/core/templates/: mod.rs
src/core/usecase/: mod.rs  usecase.rs
src/core/utils/: check_server_status.rs  datetime_util.rs  mod.rs  msg_builder.rs  query_params_parser.rs  validators.rs
src/static/: index.html
src/websocket/: mod.rs  ws_handler.rs  ws_manager.rs  ws_model.rs
(+85 files in other folders)
