[package]
name = "core_server"
version = "1.0.0"
edition = "2021"

[lib]
name = "core_server"
path = "src/lib.rs"

[[bin]]
name = "core_server"
path = "src/main.rs"

[dependencies]
warp = { version = "^0.4", features = ["server", "websocket"] }
tokio = { version = "^1", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^1.0"
async-trait = "^0.1"
mongodb = { version = "^3", features = ["sync"] }
bson = { version = "2.0", features = ["chrono-0_4"] }
jsonwebtoken = "^9.0"
bcrypt = "^0.14"
dotenv = "^0.15"
tracing = "^0.1"
tracing-subscriber = "^0.3"
chrono = { version = "0.4.38", features = ["serde"] }
rand = "^0.8"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4"] }
image = "0.25.8"
tokio-util = "0.7.16"
regex = "1.12.2"
sanitize-filename = "0.6.0"
resend-rs = "0.19.0"


[dev-dependencies]
mockall = "^0.13"
